@@ -692,6 +692,116 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testRetrieveDifferentArtifactsOfSameModuleToSameFile
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org2/mod2.2/ivys/ivy-0.5.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|ModuleDescriptor
+name|md
+init|=
+name|report
+operator|.
+name|getModuleDescriptor
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|String
+name|pattern
+init|=
+literal|"build/test/retrieve/[module]/[module].[ext]"
+decl_stmt|;
+name|MockMessageLogger
+name|mockLogger
+init|=
+operator|new
+name|MockMessageLogger
+argument_list|()
+decl_stmt|;
+name|Message
+operator|.
+name|setDefaultLogger
+argument_list|(
+name|mockLogger
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|ivy
+operator|.
+name|retrieve
+argument_list|(
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|,
+name|pattern
+argument_list|,
+name|getRetrieveOptions
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Exeption should have been thrown!"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|RuntimeException
+name|e
+parameter_list|)
+block|{
+comment|// expected!
+block|}
+name|mockLogger
+operator|.
+name|assertLogDoesntContain
+argument_list|(
+literal|"multiple artifacts"
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testEvent
 parameter_list|()
 throws|throws
